// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDoViews Testing the rendering of a new element after adding 1`] = `
<div class="container">
  <h1>Todos</h1>
  <div class="row mt-3">
    <div class="col">
      <div class="v-sheet theme--light elevation-1 rounded">
        <form novalidate="novalidate" class="v-form d-flex justify-space-between align-center px-2 mt-0">
          <div class="v-input mt-0 theme--light v-text-field">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><input required="required" id="input-294" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div> <button type="button" class="v-btn v-btn--text theme--light v-size--default"><span class="v-btn__content"> + ADD </span></button>
        </form>
      </div>
    </div>
  </div>
  <div class="row">
    <div class="col">
      <div class="v-sheet theme--light elevation-1 rounded">
        <ul class="todo__list px-3">
          <li class="todo__list_nav">
            <div>
              <div class="todo__item__filter">
                <h2 class="todo__filter_header"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M14,12V19.88C14.04,20.18 13.94,20.5 13.71,20.71C13.32,21.1 12.69,21.1 12.3,20.71L10.29,18.7C10.06,18.47 9.96,18.16 10,17.87V12H9.97L4.21,4.62C3.87,4.19 3.95,3.56 4.38,3.22C4.57,3.08 4.78,3 5,3V3H19V3C19.22,3 19.43,3.08 19.62,3.22C20.05,3.56 20.13,4.19 19.79,4.62L14.03,12H14Z"></path></svg></span> Filter
                </h2>
                <div class="container todo__filter_container align-center">
                  <div class="row">
                    <div class="todo__filter_container col col-2">
                      <div class="v-input todo__filter_check theme--light v-input--selection-controls v-input--checkbox">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-302" role="checkbox" type="checkbox" value="">
                              <div class="v-input--selection-controls__ripple"></div>
                            </div><label for="input-302" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label"> Activate filter </span></label>
                          </div>
                          <div class="v-messages theme--light">
                            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class="col">
                      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field">
                        <div class="v-input__prepend-outer">
                          <div class="v-input__icon v-input__icon--prepend"><i aria-hidden="true" class="v-icon notranslate v-icon--disabled mdi mdi-calendar theme--light"></i></div>
                        </div>
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-307" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">From Date</label><input role="button" aria-haspopup="true" aria-expanded="false" disabled="disabled" id="input-307" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                    <div class="col">
                      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field">
                        <div class="v-input__prepend-outer">
                          <div class="v-input__icon v-input__icon--prepend"><i aria-hidden="true" class="v-icon notranslate v-icon--disabled mdi mdi-calendar theme--light"></i></div>
                        </div>
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-312" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">To Date</label><input role="button" aria-haspopup="true" aria-expanded="false" disabled="disabled" id="input-312" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                    <div class="d-flex justify-end col col-2"><button type="button" disabled="disabled" class="todo__filter_btn v-btn v-btn--disabled v-btn--text theme--light v-size--default"><span class="v-btn__content">
          Apply
        </span></button></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
              <div class="todo__item__find">
                <h2 class="todo__find_header"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"></path></svg></span> Search
                </h2>
                <div class="container todo__find_container align-center">
                  <div class="row">
                    <div class="col col-8">
                      <div class="v-input theme--light v-text-field">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-320" class="v-label theme--light" style="left: 0px; position: absolute;">Title todo</label><input id="input-320" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div> <label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;">Total downloaded tasks: 3</label>
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
          </li>
          <!---->
          <div class="v-virtual-scroll todo_list" style="height: 300px;">
            <div class="v-virtual-scroll__container" style="height: 198px;">
              <div class="v-virtual-scroll__item" style="top: 0px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-327" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-327" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">Test
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-24 Time:
      13:38
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
              <div class="v-virtual-scroll__item" style="top: 66px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-337" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-337" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">15678
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-24 Time:
      13:38
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
              <div class="v-virtual-scroll__item" style="top: 132px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-347" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-347" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">у21у21у122112у
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-14 Time:
      18:25
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
            </div>
          </div>
          <!---->
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoViews Testing the rendering of the ToDoViews component 1`] = `
<div class="container">
  <h1>Todos</h1>
  <div class="row mt-3">
    <div class="col">
      <div class="v-sheet theme--light elevation-1 rounded">
        <form novalidate="novalidate" class="v-form d-flex justify-space-between align-center px-2 mt-0">
          <div class="v-input mt-0 theme--light v-text-field">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><input required="required" id="input-4" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div> <button type="button" class="v-btn v-btn--text theme--light v-size--default"><span class="v-btn__content"> + ADD </span></button>
        </form>
      </div>
    </div>
  </div>
  <div class="row">
    <div class="col">
      <div class="v-sheet theme--light elevation-1 rounded">
        <ul class="todo__list px-3">
          <li class="todo__list_nav">
            <div>
              <div class="todo__item__filter">
                <h2 class="todo__filter_header"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M14,12V19.88C14.04,20.18 13.94,20.5 13.71,20.71C13.32,21.1 12.69,21.1 12.3,20.71L10.29,18.7C10.06,18.47 9.96,18.16 10,17.87V12H9.97L4.21,4.62C3.87,4.19 3.95,3.56 4.38,3.22C4.57,3.08 4.78,3 5,3V3H19V3C19.22,3 19.43,3.08 19.62,3.22C20.05,3.56 20.13,4.19 19.79,4.62L14.03,12H14Z"></path></svg></span> Filter
                </h2>
                <div class="container todo__filter_container align-center">
                  <div class="row">
                    <div class="todo__filter_container col col-2">
                      <div class="v-input todo__filter_check theme--light v-input--selection-controls v-input--checkbox">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-12" role="checkbox" type="checkbox" value="">
                              <div class="v-input--selection-controls__ripple"></div>
                            </div><label for="input-12" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label"> Activate filter </span></label>
                          </div>
                          <div class="v-messages theme--light">
                            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class="col">
                      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field">
                        <div class="v-input__prepend-outer">
                          <div class="v-input__icon v-input__icon--prepend"><i aria-hidden="true" class="v-icon notranslate v-icon--disabled mdi mdi-calendar theme--light"></i></div>
                        </div>
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-17" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">From Date</label><input role="button" aria-haspopup="true" aria-expanded="false" disabled="disabled" id="input-17" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                    <div class="col">
                      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field">
                        <div class="v-input__prepend-outer">
                          <div class="v-input__icon v-input__icon--prepend"><i aria-hidden="true" class="v-icon notranslate v-icon--disabled mdi mdi-calendar theme--light"></i></div>
                        </div>
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-22" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">To Date</label><input role="button" aria-haspopup="true" aria-expanded="false" disabled="disabled" id="input-22" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                    <div class="d-flex justify-end col col-2"><button type="button" disabled="disabled" class="todo__filter_btn v-btn v-btn--disabled v-btn--text theme--light v-size--default"><span class="v-btn__content">
          Apply
        </span></button></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
              <div class="todo__item__find">
                <h2 class="todo__find_header"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"></path></svg></span> Search
                </h2>
                <div class="container todo__find_container align-center">
                  <div class="row">
                    <div class="col col-8">
                      <div class="v-input theme--light v-text-field">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-30" class="v-label theme--light" style="left: 0px; position: absolute;">Title todo</label><input id="input-30" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div> <label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;">Total downloaded tasks: 2</label>
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
          </li>
          <!---->
          <div class="v-virtual-scroll todo_list" style="height: 300px;">
            <div class="v-virtual-scroll__container" style="height: 132px;">
              <div class="v-virtual-scroll__item" style="top: 0px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-37" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-37" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">15678
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-24 Time:
      13:38
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
              <div class="v-virtual-scroll__item" style="top: 66px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-47" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-47" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">у21у21у122112у
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-14 Time:
      18:25
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
            </div>
          </div>
          <!---->
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoViews Testing the rendering of the ToDoViews component with the LIMIT_ELEMENT = 1 configuration 1`] = `
<div class="container">
  <h1>Todos</h1>
  <div class="row mt-3">
    <div class="col">
      <div class="v-sheet theme--light elevation-1 rounded">
        <form novalidate="novalidate" class="v-form d-flex justify-space-between align-center px-2 mt-0">
          <div class="v-input mt-0 theme--light v-text-field">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><input required="required" id="input-848" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div> <button type="button" class="v-btn v-btn--text theme--light v-size--default"><span class="v-btn__content"> + ADD </span></button>
        </form>
      </div>
    </div>
  </div>
  <div class="row">
    <div class="col">
      <div class="v-sheet theme--light elevation-1 rounded">
        <ul class="todo__list px-3">
          <li class="todo__list_nav">
            <div>
              <div class="todo__item__filter">
                <h2 class="todo__filter_header"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M14,12V19.88C14.04,20.18 13.94,20.5 13.71,20.71C13.32,21.1 12.69,21.1 12.3,20.71L10.29,18.7C10.06,18.47 9.96,18.16 10,17.87V12H9.97L4.21,4.62C3.87,4.19 3.95,3.56 4.38,3.22C4.57,3.08 4.78,3 5,3V3H19V3C19.22,3 19.43,3.08 19.62,3.22C20.05,3.56 20.13,4.19 19.79,4.62L14.03,12H14Z"></path></svg></span> Filter
                </h2>
                <div class="container todo__filter_container align-center">
                  <div class="row">
                    <div class="todo__filter_container col col-2">
                      <div class="v-input todo__filter_check theme--light v-input--selection-controls v-input--checkbox">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-856" role="checkbox" type="checkbox" value="">
                              <div class="v-input--selection-controls__ripple"></div>
                            </div><label for="input-856" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label"> Activate filter </span></label>
                          </div>
                          <div class="v-messages theme--light">
                            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class="col">
                      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field">
                        <div class="v-input__prepend-outer">
                          <div class="v-input__icon v-input__icon--prepend"><i aria-hidden="true" class="v-icon notranslate v-icon--disabled mdi mdi-calendar theme--light"></i></div>
                        </div>
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-861" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">From Date</label><input role="button" aria-haspopup="true" aria-expanded="false" disabled="disabled" id="input-861" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                    <div class="col">
                      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field">
                        <div class="v-input__prepend-outer">
                          <div class="v-input__icon v-input__icon--prepend"><i aria-hidden="true" class="v-icon notranslate v-icon--disabled mdi mdi-calendar theme--light"></i></div>
                        </div>
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-866" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">To Date</label><input role="button" aria-haspopup="true" aria-expanded="false" disabled="disabled" id="input-866" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                    <div class="d-flex justify-end col col-2"><button type="button" disabled="disabled" class="todo__filter_btn v-btn v-btn--disabled v-btn--text theme--light v-size--default"><span class="v-btn__content">
          Apply
        </span></button></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
              <div class="todo__item__find">
                <h2 class="todo__find_header"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"></path></svg></span> Search
                </h2>
                <div class="container todo__find_container align-center">
                  <div class="row">
                    <div class="col col-8">
                      <div class="v-input theme--light v-text-field">
                        <div class="v-input__control">
                          <div class="v-input__slot">
                            <div class="v-text-field__slot"><label for="input-874" class="v-label theme--light" style="left: 0px; position: absolute;">Title todo</label><input id="input-874" type="text"></div>
                          </div>
                          <div class="v-text-field__details">
                            <div class="v-messages theme--light">
                              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div> <label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;">Total downloaded tasks: 2</label>
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
          </li>
          <!---->
          <div class="v-virtual-scroll todo_list" style="height: 300px;">
            <div class="v-virtual-scroll__container" style="height: 132px;">
              <div class="v-virtual-scroll__item" style="top: 0px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-896" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-896" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">15678
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-24 Time:
      13:38
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
              <div class="v-virtual-scroll__item" style="top: 66px;">
                <div draggable="true" class="todo__item__wrapper">
                  <div class="d-flex justify-space-between align-center">
                    <div class="v-input todo__item__checkbox theme--light v-input--selection-controls v-input--checkbox">
                      <div class="v-input__control">
                        <div class="v-input__slot">
                          <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-906" role="checkbox" type="checkbox" value="">
                            <div class="v-input--selection-controls__ripple"></div>
                          </div><label for="input-906" class="v-label theme--light" style="left: 0px; position: relative;"><span class="checkbox__label">у21у21у122112у
        </span></label>
                        </div>
                        <div class="v-messages theme--light">
                          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                        </div>
                      </div>
                    </div> <span class="todo__item__info ml-auto">
      Date create: 2022-01-14 Time:
      18:25
    </span> <button type="button" class="todo__item__delete v-btn v-btn--text theme--light v-size--default visible"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"></path></svg></span>
                      Delete
                      </span></button>
                    <div role="dialog" class="v-dialog__container">
                      <!---->
                    </div>
                  </div>
                  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
                </div>
              </div>
            </div>
          </div>
          <li class="d-flex justify-center"><button type="button" class="v-btn v-btn--text theme--light v-size--default"><span class="v-btn__content"> Download more </span></button></li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
